Fixed white space on bottom of page
- added a container with height of 100% to fill white space

--- a/src/client/app/ui/layout/layout.component.css
+++ b/src/client/app/ui/layout/layout.component.css
@@ -5,3 +5,7 @@
 #content-row {
     min-height: 100%;
 }
+
+.app-container {
+    height: 100%;
+}
